Experiments to finalize the shipped fmp4 fragments